# docvault

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.production  LICENSE  README.md  SECURITY.md  docker-compose.yml  manage.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
ai/: chat.py  client.py  embeddings.py  features.py  plugin.py  serializers.py  views.py
annotations/: views.py
collaboration/: models.py  serializers.py  signals.py  urls.py
core/: models.py  pagination.py  urls.py
dev/: AGENTS.md  README.md  architecture.md  product-spec.md  project-plan.md
docs/: how-we-got-here.html  index.html  website.html
documents/: constants.py  views.py
docvault/: Dockerfile  Dockerfile.production  celery.py  docker-compose.yml  urls.py
entities/: constants.py  plugin.py  serializers.py
esignatures/: apps.py  models.py  serializers.py  urls.py  views.py
legal_hold/: apps.py  engine.py  serializers.py  urls.py  views.py
ml/: classifier.py  plugin.py  preprocessing.py  urls.py
notifications/: apps.py  constants.py  dispatch.py  quotas.py  serializers.py  signals.py  tasks.py
organization/: apps.py  serializers.py  urls.py
physical_records/: models.py  tasks.py  views.py
portal/: apps.py  constants.py  models.py  urls.py  views.py
processing/: admin.py  apps.py  consumer.py  consumers.py  serializers.py  signals.py  urls.py
relationships/: apps.py  models.py  urls.py
requirements/: base.txt  test.txt
search/: indexing.py  models.py  query.py  saved_view_executor.py  views.py
(+608 files in other folders)
